--- a/src/display/Display.css
+++ b/src/display/Display.css
@@ -3,8 +3,8 @@
     background-color: rgba(25, 25, 25, .8);
     width: calc(100% - 430px);
     height: calc(100% - 100px);
+    min-width: 510px;
     min-height: 400px;
-    min-width: 500px;
     margin-top: 70px;
     margin-right: 8px;
     border-radius: 30px;
@@ -44,9 +44,6 @@
     z-index: -1;
 }
 
-.destination-name{
-  position: relative;
-}
 
 .destination-name:after{
   position: absolute;
@@ -129,9 +126,9 @@
     cursor: default;
     position: absolute;
     color: white;
-    font-size: 40px;
+    font-size: 28px;
     top: 10px;
-    left: 40%;
+    /* left: 50%; */
     transform: translateX(-50%);
     white-space: nowrap;
     text-align: left;
@@ -258,7 +255,7 @@
   .arrival{
     cursor: default;
     position: absolute;
-    top: 55px;
+    top: 60px;
     left: calc(50% + 10px);
     transform: translateX(-50%);
     color: white;
@@ -268,7 +265,7 @@
   .departure{
     cursor: default;
     position: absolute;
-    top: 80px;
+    top: 85px;
     left: calc(50% - 4px);
     transform: translateX(-50%);
     color: white;
@@ -286,8 +283,9 @@
     position: relative;
     background-color: transparent;
     border: none;
-    width: 15px;
+    width: 17px;
     color: white;
+    font-size: 14px;
   }
 
   .photo{
@@ -339,11 +337,11 @@
   }
 
   .half{
-    width: 21px;
+    width: 22px;
   }
 
   .year{
-    width: 30px;
+    width: 34px;
   }
 
   .map-button{
@@ -391,19 +389,7 @@
     opacity: 1;
   }
 
-  @media only screen and (max-width: 1200px) {
-    .destination-name{
-      font-size: 34px;
-    }
-  }
-
-  @media only screen and (max-width: 1100px) {
-    .destination-name{
-      font-size: 28px;
-    }
-  }
-
-  @media only screen and (max-width: 1000px) {
+  @media only screen and (max-width: 1030px) {
     .destination-name{
       font-size: 22px;
     }
